@@ -46,5 +46,7 @@
       </dependency>
 
 
-  </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>16</source><target>16</target></configuration></plugin></plugins></build>
+  </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>22</source><target>22</target>
+    <compilerArgs>--enable-preview</compilerArgs>
+</configuration></plugin></plugins></build>
 </project>
